--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>Degi Nyamsuren</h1>
-<img src="https://picsum.photos/200/300/?blur" alt="I love coffee">
+<img src="https://picsum.photos/200/300/" alt="Degi Nyamsuren">
 
 
 <p> Where to find me:</p>
